# miniminds-agent-framework

./: LICENSE  README.md  pyproject.toml  session.py
agent/: base.py
agent/examples/: 00_raw_unit_tester.py  01_raw_traced_unit_tester.py
agent/unit_tester/: v1_simple.py  v2_scratchpad.py
llm/: config.py  groq_client.py
tools/: base.py  decorator.py
tools/llm_tests/: report.txt  test_results.json  test_results.txt
tools/toolkit/: web_explorer.py
tools/toolkit/builtin/: code_tools.py  file_tools.py  json_tools.py
